esp/public/media/default_styles/admin_bar.css
#adminbar {
	background: none repeat scroll 0 0 #EEEEEE;
	border: 1px solid #AAAAAA;
	right: 20px;
	left: auto;
	position: absolute;
	top: 55px;
	width: 200px;
	z-index: 1000000;
	text-align: center;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#adminbar>.title {
	color: black;
	font-size: 12pt;
	padding: 5px 0px;
	text-align: center;
	font-weight: bold;
	cursor: pointer;
}

.adminbar_user_search,
.adminbar_class_search {
	color: black;
}

#adminbar_content form,
#adminbar_content .input-append {
	margin: 0;
}

#user_search_submit,
#class_search_submit {
	display: inline-block;
	*display: inline;
	*zoom: 1;
	padding: 4px 10px 4px;
	margin-bottom: 0;
	font-size: 13px;
	line-height: 18px;
	*line-height: 20px;
	color: #333333;
	text-align: center;
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
	vertical-align: middle;
	cursor: pointer;
	background-color: #f5f5f5;
	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: linear-gradient(top, #ffffff, #e6e6e6);
	background-repeat: repeat-x;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
	*background-color: #e6e6e6;
	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
	border: 1px solid #cccccc;
	*border: 0;
	border-bottom-color: #b3b3b3;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	*margin-left: .3em;
	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
}

#adminbar>.btn {
	border-color: #ccc;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
}

#adminbar_content .title {
	background: #ccc;
	border-top: 1px solid #aaa;
	cursor: pointer;
	font-size: 12pt;
	color: black;
	padding: 3px 0px;
}

#adminbar_content .title:hover {
	background: #bbb;
}

#user_search_field {
	font-weight: bold;
	border-style: solid;
	border-width: 1px;
	border-color: #000000;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	font-size: 13px;
	vertical-align: middle;
	padding: 4px;
	margin: 5px 2px 5px 2px;
	width: 130px;
}

#class_search_field {
	font-weight: bold;
	border-style: solid;
	border-width: 1px;
	border-color: #000000;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	font-size: 13px;
	vertical-align: middle;
	padding: 4px;
	margin: 5px 2px 5px 2px;
	width: 130px;
	color: black;
}

#user_search_field,
#class_search_field {
	width: 130px;
}

.input-append .add-on:last-child,
.input-append .btn:last-child {
	-webkit-border-radius: 0 3px 3px 0;
	-moz-border-radius: 0 3px 3px 0;
	border-radius: 0 3px 3px 0;
}

.input-prepend .add-on,
.input-append .add-on,
.input-prepend .btn,
.input-append .btn {
	margin-left: -1px;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
}

.glyphicon.glyphicon-btn-height::before {
	line-height: 18px;
}

#adminbar_content .content {
	padding: 5px;
}

#adminbar_Manage_content,
#adminbar_Other_content {
	font-size: 13px;
}

